# $Id$

2005-11-08
	* Fix bug# 1351686.  Patch by boojit.

2005-11-01
	* Documentation updates for compiling and port monitoring
	* Removed cairo stuff (it's useless)

2005-10-31
	* Added statfs sf.net patch 1344493

2005-10-30
	* Added tcp port monitor support (pkovacs)

2005-10-28
	* Added WM_CLASS patch from sf.net patch 1340825

2005-10-21
	* acpi segfault should be fixed (sf.net bug 1330893)
	* SIGUSR1 bug fixed? (sf.net bug 1330914)

2005-10-17
	* Ugly MPD mem leak fixed
	* Other mem leaks fixed
	* Fixed thing where conky exits if LC_ALL and friends isn't set
	* Conky 1.3.3 released

2005-10-13
	* Conky 1.3.2 released

2005-10-10
	* More MPD objects (sf.net patch 1319461)

2005-10-07
	* fixed mldonkey bug? sf.net bug 1316531

2005-09-30
	* Linkstatus patch from btlee on f.g.o (see
	http://forums.gentoo.org/viewtopic-p-2765647.html#2765647)

2005-09-29
	* Fixed build on FreeBSD for non-i386
	* Made it so top_mem doesn't show all the forks of one process

2005-09-27
	* Fixed small bug in config parsing (thanks robgrady, bug 1306032)

2005-09-24
	* Fixed bug where graphs/bars don't show when maximum_width is enabled

2005-09-15
	* Fixed right-alignment bug thanks to Pascal Eberhard
	* Applied patch 1291420 from sf.net
	* Fixed issue with whack graph data
	* Fixed issue with Conky quitting when a file fails to load

2005-09-11
	* Fixed bug with xft and double buffer in own window
	* 1.3.1 released

2005-09-04
	* Misc small bug fixes

2005-09-03
	* MPD patch (sf.net patch 1281108)
	* Fixed graph width bug

2005-08-31
	* FreeBSD support was added
	* 1.3.0 released

2005-08-27
	* added threaded execi, $texeci
	* feature freeze

2005-08-26
	* Fixed slight vertical misalignment of bars/graphs (sf.net 1273994)
	* Diskio fixes (sf.net 1274140)
	* $alignr and $alignc now have 25% more goodness! (sf.net bug 1273905)
	* Far better SMP support
	* Added support for i8k kernel driver, parsing information for dell inspiron laptops found in /proc/i8k (sf.net request 1256058)
